appId: host.exp.Exponent
---
# TEST: Referral
- runFlow: helpers/dismiss_keychain.yaml
- runFlow: helpers/go_tab_profile.yaml
- scroll

- tapOn:
    text: ".*taklif.*|.*Do.st.*|.*Реферал.*"
- waitForAnimationToEnd
- takeScreenshot: referral_01
- scroll
- takeScreenshot: referral_02_scroll
- runFlow: helpers/go_back.yaml
